modificação de background

--- a/main.css
+++ b/main.css
@@ -5,8 +5,7 @@
 }
 
 body{
-    background-color: rgba(213, 243, 79, 0.425);
-    background-image:url;
+    background-image:url(https://static.vecteezy.com/ti/vetor-gratis/p1/3293255-luz-verde-amarelo-pano-de-fundo-com-notas-musicais-vetor.jpg);
 }
 
 .container {
